--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -309,90 +309,90 @@ layouts:
       sizeY: 4
       type: timeline-selector
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-date-field: 'date'
-        override-start-date: '1/1/2013'
-        override-end-date: 1388534399000
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-date-field: "'date'"
+        override-start-date: "'1/1/2013'"
+        override-end-date: "1388534399000"
     - 
       sizeX: 12
       sizeY: 4
       type: map
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-latitude-field: 'latitude'
-        bind-longitude-field: 'longitude'
-        bind-color-field: 'type'
-        bind-size-field: 'type'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-latitude-field: "'latitude'"
+        bind-longitude-field: "'longitude'"
+        bind-color-field: "'type'"
+        bind-size-field: "'type'"
     - 
       sizeX: 6
       sizeY: 4
       type: circular-heat-form
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-date-field: 'date'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-date-field: "'date'"
     - 
       sizeX: 6
       sizeY: 4
       type: linechart
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-date-field: 'date'
-        bind-y-axis-field: 'type'
-        bind-category-field: 'type'
-        bind-aggregation-field: 'count'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-date-field: "'date'"
+        bind-y-axis-field: "'type'"
+        bind-category-field: "'type'"
+        bind-aggregation-field: "'count'"
     - 
       sizeX: 6
       sizeY: 4
       type: barchart
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-x-axis-field: 'type'
-        bind-y-axis-field: 'type'
-        bind-aggregation-field: 'count'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-x-axis-field: "'type'"
+        bind-y-axis-field: "'type'"
+        bind-aggregation-field: "'count'"
     - 
       sizeX: 6
       sizeY: 4
       type: count-by
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-count-field: 'type'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-count-field: "'type'"
     - 
       sizeX: 6
       sizeY: 4
       type: tag-cloud
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
-        bind-tag-field: 'hashtags'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
+        bind-tag-field: "'hashtags'"
     - 
       sizeX: 6
       sizeY: 4
       type: sunburst
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
     - 
       sizeX: 12
       sizeY: 4
       type: query-results-table
       bindings: 
-        bind-title: 'myTitle'
-        bind-database: 'myDatabase'
-        bind-table: 'myTable'
+        bind-title: "'myTitle'"
+        bind-database: "'myDatabase'"
+        bind-table: "'myTable'"
 files: 
   datasets: 
     - ./config/sample.dataset.config.json
