--- a/.jshintrc
+++ b/.jshintrc
@@ -105,6 +105,7 @@
         "module": true,
         "neon": true,
         "neonColors": true,
+        "neonMappings": true,
         "ocpu": true,
         "OpenLayers": true,
         "OWF": true,
