NEON-1690 adding sample.config.json line for setting default theme

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -1,4 +1,5 @@
 {
+    "theme": "dark-purple",
     "user_ale": {
         "loggingUrl": "http://192.168.1.100",
         "toolName": "Neon Dashboard",
