NEON-1732 Handle fields with objects

--- a/.jshintrc
+++ b/.jshintrc
@@ -101,8 +101,10 @@
         "expect": false,
         "it": false,
         "inject": false,
+        "jsyaml": true,
         "mediators": true,
         "module": true,
+        "Mustache": true,
         "neon": true,
         "neonColors": true,
         "neonMappings": true,
