--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
         "grunt-contrib-jshint": "0.11.2",
         "grunt-contrib-less": "1.0.0",
         "grunt-contrib-yuidoc": "0.7.0",
+        "grunt-contrib-concat": "0.5.1",
+        "grunt-contrib-copy": "0.8.2",
         "grunt-git-describe": "2.3.2",
         "grunt-jscs": "1.8.0",
         "grunt-karma": "0.10.1",
+        "grunt-spritesmith": "5.2.0",
+        "grunt-text-replace": "0.4.0",
         "grunt-war": "0.4.5",
         "http-server": "0.8.0",
         "karma": "0.12.31",
