NEON-1829 The help property in the configuration file now contains options for both local videos (using the popup as before) and web videos (opening them in a new tab).

--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -28,7 +28,8 @@ dashboard:
     google: API_KEY
 help: 
   guide: 
-  video: 
+  webVideo: 
+  localVideo: 
 opencpu: 
   enableOpenCpu: false
   enableLogging: false
