--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -417,7 +417,8 @@
 
     "help": {
         "guide": "",
-        "video": ""
+        "webVideo": "",
+        "localVideo": "",
     },
 
     "files": {
