--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
         "grunt-bower-task": "0.4.0",
         "grunt-cli": "0.1.13",
         "grunt-contrib-clean": "0.6.0",
-        "grunt-contrib-jshint": "0.11.2",
-        "grunt-contrib-less": "1.0.0",
-        "grunt-contrib-yuidoc": "0.7.0",
         "grunt-contrib-concat": "0.5.1",
         "grunt-contrib-copy": "0.8.2",
+        "grunt-contrib-jshint": "0.11.2",
+        "grunt-contrib-less": "1.0.0",
+        "grunt-contrib-uglify": "0.10.1",
+        "grunt-contrib-yuidoc": "0.7.0",
         "grunt-git-describe": "2.3.2",
         "grunt-jscs": "1.8.0",
         "grunt-karma": "0.10.1",
