--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "license": "Apache v2",
     "private": true,
     "dependencies": {
+        "ag-grid": "2.3.5",
         "angular": "1.3.14",
         "angular-bootstrap-datetimepicker": "0.3.13",
         "angular-gantt": "1.2.6",
