--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
         "angular-bootstrap-datetimepicker": "0.3.13",
         "angular-gantt": "1.2.6",
         "angular-gridster": "0.13.4",
+        "angular-linkify": "1.2.0",
         "angular-loader": "1.3.14",
         "angular-mocks": "1.3.14",
         "angular-route": "1.3.14",
