--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "devDependencies": {
         "bower": "1.4.1",
         "grunt": "0.4.5",
-        "grunt-bower-task": "0.4.0",
+        "grunt-angular-templates": "0.5.9",
         "grunt-cli": "0.1.13",
         "grunt-contrib-clean": "0.6.0",
         "grunt-contrib-concat": "0.5.1",
         "grunt-contrib-copy": "0.8.2",
+        "grunt-contrib-cssmin": "0.14.0",
         "grunt-contrib-jshint": "0.11.2",
         "grunt-contrib-less": "1.0.0",
         "grunt-contrib-uglify": "0.10.1",
         "grunt-contrib-yuidoc": "0.7.0",
+        "grunt-exec": "0.4.6",
         "grunt-git-describe": "2.3.2",
+        "grunt-injector": "0.6.1",
         "grunt-jscs": "1.8.0",
         "grunt-karma": "0.10.1",
         "grunt-spritesmith": "5.2.0",
-        "grunt-text-replace": "0.4.0",
+        "grunt-usemin": "2.1.1",
         "grunt-war": "0.4.5",
+        "grunt-wiredep": "2.0.0",
         "http-server": "0.8.0",
         "karma": "0.12.31",
         "karma-junit-reporter": "0.2.2",
