--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
         "jquery-ui": "1.10.4",
         "threedubmedia.jquery.event": "2.2",
         "javascript-detect-element-resize": "sdecima/javascript-detect-element-resize#0.5.3",
+        "jquery.linky": "0.1.8",
         "jquery.tagcloud": "https://github.com/addywaddy/jquery.tagcloud.js.git",
         "js-yaml": "3.4.3",
         "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
